--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -14,7 +14,7 @@
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
             <button type="submit" id="login-btn">Login</button>
-            <p id="error-message"></p>
+            <p id="error-message">show message</p>
         </form>
     </div>
 </div>
