Reuse on websocket connection

--- a/src/main/resources/META-INF/resources/chat/chat.html
+++ b/src/main/resources/META-INF/resources/chat/chat.html
@@ -46,6 +46,7 @@
     </div>
 
 </div>
-<script src="/js/chat.js"></script>
+<script src="/js/websocket-service.js" type="module"></script>
+<script src="/js/chat.js" type="module"></script>
 </body>
 </html>
