--- a/src/main/resources/META-INF/resources/chat/chats.html
+++ b/src/main/resources/META-INF/resources/chat/chats.html
@@ -40,7 +40,7 @@
         <button id="cancel-invite-code-button">Cancel</button>
     </div>
 </div>
-
-<script src="/js/chats.js"></script>
+<script src="/js/websocket-service.js" type="module"></script>
+<script src="/js/chats.js" type="module"></script>
 </body>
 </html>
